<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_carga"
    tools:context=".activity_datos">

    <include
        layout="@layout/imagen_fija"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/presentacion"
        android:layout_width="385dp"
        android:layout_height="111dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:text="@string/titulo_formulario"
        android:textColor="@color/white"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:text="@string/nombre1"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentacion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <TextView
        android:id="@+id/text_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:text="@string/edad1"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:digits="0 1 2 3 4 5 6 7 8 9"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:hint="@string/edad"
        android:maxLength="2"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />


    <TextView
        android:id="@+id/text_grado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:text="@string/estresado"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <SeekBar
        android:id="@+id/seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="353dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:max="4"
        android:progress="2"
        android:progressBackgroundTint="@color/white"
        android:thumb="@drawable/icono_barra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="@font/fresca"
        android:onClick="onClick"
        android:text="@string/enviar"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/textito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fresca"
        android:text="@string/nivel"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />


</androidx.constraintlayout.widget.ConstraintLayout>