<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_carga"
    tools:context=".activity_mentores">

    <include layout="@layout/imagen_fija" />


    <TextView
        android:id="@+id/mentoresT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/fresca"
        android:text="@string/elegir"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />


    <Button
        android:id="@+id/button_ines"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/btn_mentor"
        android:drawableLeft="@drawable/ines"
        android:fontFamily="@font/fresca"
        android:onClick="onClick"
        android:text="@string/descripcion_ines"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/button_paula"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/btn_mentor"
        android:drawableRight="@drawable/paula"
        android:fontFamily="@font/fresca"
        android:onClick="onClick"
        android:text="@string/descripcion_paula"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/button_jimena"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/btn_mentor"
        android:drawableLeft="@drawable/jimena"
        android:fontFamily="@font/fresca"
        android:onClick="onClick"
        android:text="@string/descripcion_jimena"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

</androidx.constraintlayout.widget.ConstraintLayout>