<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    tools:context=".activity_actividadLista">

    <include layout="@layout/imagen_fija" />


    <TextView
        android:id="@+id/titulo_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fresca"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:shadowColor="@color/fondo_carga"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375">

        <LinearLayout
            android:id = "@+id/linear1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descripcion_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:fontFamily="@font/fresca"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/linear"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/boton_link"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:visibility="invisible" />

            </LinearLayout>


            <SeekBar
                android:id="@+id/seekBar_vol"
                android:layout_width="313dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:max="10"
                android:progress="3"
                android:layout_gravity="center"
                android:progressTint="@color/fondo_carga"
                android:thumbTint="@color/botones"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actividades"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/calendario"
                android:fontFamily="@font/fresca"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_fecha"
                    android:layout_width="125dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/botones"
                    android:textColor="@color/white"
                    android:text="@string/fecha"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/btn_hora"
                    android:layout_width="125dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/botones"
                    android:textColor="@color/white"
                    android:text="@string/hora"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_anadirA"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/botones"
                android:textColor="@color/white"
                android:text="@string/cal"
                android:textAllCaps="false"
                android:onClick="onClick"
                app:cornerRadius="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/moneditas"
                android:fontFamily="@font/fresca"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/checkSi"
                    android:layout_width="60dp"
                    android:layout_height="40dp"

                    android:text="@string/si"
                    android:textSize="20dp"
                    android:fontFamily="@font/fresca"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contenido" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eliminar"
                android:fontFamily="@font/fresca"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp" />
            <Button
                android:id="@+id/boton_eliminar"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/botones"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/btn_eliminar"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.868"/>



        </LinearLayout>
    </ScrollView>


    <ImageButton
        android:id="@+id/calendario"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:background="@drawable/calendar"
        android:elevation="1dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <ImageButton
        android:id="@+id/button_eleccion"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:background="@drawable/home"
        android:elevation="1dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <ImageButton
        android:id="@+id/ajustes"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:background="@drawable/ajustes"
        android:elevation="1dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />


    <View
        android:id="@+id/view_menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>